Kubernetes/tekton/triggers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  github-eventlistener-ingress
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
  - http: "crud-webhook.apps.dmi3lab.online"
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: el-github-listener
            port:
              number: 8080
